<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.register.RegisterActivity">

    <TextView
        android:id="@+id/event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/dialog_buy_ticket_event_name"
        android:importantForAutofill="no"/>

    <TextView
        android:id="@+id/tv_event_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_buy_ticket_event_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:labelFor="@+id/event_name"
        android:textAlignment="textStart"
        android:alpha="0.6"
        android:layout_marginStart="8dp"
        android:textSize="14sp"
        android:textColor="@color/colorTextView"
        android:layout_below="@id/event_name"
        android:gravity="start"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/event_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_below="@id/tv_event_type"
        android:ems="10"
        android:hint="@string/dialog_buy_ticket_event_price"
        android:importantForAutofill="no"/>

    <TextView
        android:id="@+id/tv_event_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_buy_ticket_event_price"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:labelFor="@+id/event_price"
        android:textAlignment="textStart"
        android:alpha="0.6"
        android:layout_marginStart="8dp"
        android:textSize="14sp"
        android:textColor="@color/colorTextView"
        android:layout_below="@id/event_price"
        android:gravity="start"
        android:layout_marginLeft="8dp" />

    <Spinner
        android:id="@+id/event_ticket_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_below="@id/tv_event_price"
        android:prompt="@string/dialog_buy_ticket_event_ticket_number"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/tv_event_ticket_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_buy_ticket_event_ticket_number"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:labelFor="@+id/event_ticket_number"
        android:textAlignment="textStart"
        android:alpha="0.6"
        android:layout_marginStart="8dp"
        android:textSize="14sp"
        android:textColor="@color/colorTextView"
        android:layout_below="@id/event_ticket_number"
        android:gravity="start"
        android:layout_marginLeft="8dp" />
</RelativeLayout>