<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:src="@drawable/event_type_concert"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/description"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toRightOf="@+id/image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/from_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_list_item_from"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/image"
        app:layout_constraintRight_toLeftOf="@+id/from"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/to_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_list_item_to"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/image"
        app:layout_constraintRight_toLeftOf="@+id/to"
        app:layout_constraintTop_toBottomOf="@+id/from" />

    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from" />

    <TextView
        android:id="@+id/price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_list_item_price"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/image"
        app:layout_constraintRight_toLeftOf="@+id/to"
        app:layout_constraintTop_toBottomOf="@+id/to" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to" />

</androidx.constraintlayout.widget.ConstraintLayout>